# Proyecto_Alex

./: LICENSE  README.md  manage.py  pyproject.toml
accounts/: forms.py  urls.py  views.py
accounts/templates/accounts/: contador.html  login.html  perfil.html  registro.html
principal/: api_views.py  models.py  seriallizers.py  urls.py  urls_api.py  views.py
principal/api/: api_views.py  seriallizers.py  urls_api.py
principal/migrations/: 0001_initial.py  0002_alter_grupo_biografia_alter_grupo_genero.py  0003_remove_reserva_respuesta_sala_and_more.py
principal/templates/principal/: buscador.html  cuenta.html  cuenta_publica_grupos.html  cuenta_publica_salas.html  fechas_disponibles.html  index.html  listado_grupos.html  listado_salas.html
principal/templates/principal/partials/: lista_busqueda.html
proyecto_alex/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
templates/: base_generic.html
